# whisper_cpp_libs

./: .gitignore  .gitmodules  BUILD_GUIDE.md  BuildBoth.ps1  BuildRelease.ps1  CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: windows-x64-debug.yaml  windows-x64.yaml
workflows/: windows-x64.yaml
